--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
   pretty_dio_logger: ^1.4.0
+  intl: ^0.19.0
+  flutter_widget_from_html: ^0.15.2
 
 dev_dependencies:
   flutter_test:
